# Static-Code-Analysis-Security-Project

./: .gitignore  .pre-commit-config.yaml  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
demo/: app.py
scripts/: evaluate_models.py  train_vulnerability_detector.py
src/: __init__.py  __main__.py
src/analysis/: scanner.py
src/data/: features.py  generator.py
src/evaluation/: metrics.py
src/utils/: explainability.py  helpers.py
src/visualization/: plots.py
tests/: test_static_analysis.py
